[gd_scene load_steps=5 format=3 uid="uid://bjap7qq5o5np"]

[ext_resource type="Script" path="res://house_yaga_space/content/turret/turret.gd" id="1_gm6tt"]
[ext_resource type="PackedScene" uid="uid://bfsevsmr78ah5" path="res://house_yaga_space/content/turret/head_turret.tscn" id="2_br1q4"]
[ext_resource type="Texture2D" uid="uid://krqf650hk0v1" path="res://house_yaga_space/resource/guns/guns.sprites/gun_plate.tres" id="3_pko2q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dox87"]
radius = 707.204

[node name="Turret" type="Node2D"]
script = ExtResource("1_gm6tt")
starting_turret = ExtResource("2_br1q4")

[node name="SpaceBuilding018" type="Sprite2D" parent="."]
scale = Vector2(6, 6)
texture = ExtResource("3_pko2q")

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dox87")

[node name="HeaderHelper" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Marker2D" type="Marker2D" parent="HeaderHelper"]
position = Vector2(120, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
